# qkd-sim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: assumptions.md  metrics.md  q3-api.md  q3-overview.md  research_note.md  roadmap.md
examples/: basic_bb84.py  bb84_protocol.py  bell_state.py  measurement_demo.py  simple_circuit.py
experiments/: noise_sweep.py
q3/: __init__.py
q3/circuits/: __init__.py  circuit.py
q3/communication/: __init__.py
q3/communication/qkd/: __init__.py  attacks.py  bb84.py  channel.py  privacy.py  reconciliation.py
q3/compat/: __init__.py  qkd.py
q3/core/: __init__.py  gates.py  registers.py
q3/simulator/: __init__.py  statevector.py
qkd/: __init__.py  attacks.py  autonomy.py  channel.py  privacy.py  reconciliation.py
qkd/protocols/: __init__.py  bb84.py
tests/: test_autonomy_api.py  test_bb84.py  test_q3_core.py
