[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q3"
version = "0.2.0"
description = "Experimental quantum computation, communication, and system-level simulation framework."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26,<3",
]

[tool.setuptools.packages.find]
include = ["q3*", "qkd*"]
